[gd_scene load_steps=23 format=4 uid="uid://bjbtlenq8ak0i"]

[ext_resource type="PackedScene" uid="uid://bpf43s0oletyc" path="res://Characters/Player/Kilo/kilo.tscn" id="1_4k50d"]
[ext_resource type="Texture2D" uid="uid://csvqg16jpxw7t" path="res://Art/Tiles/Dungeon_Tiles/primary-tileset.png" id="1_ormqy"]
[ext_resource type="PackedScene" uid="uid://dpmpv7nldxxfs" path="res://UI/Solid_Background/background.tscn" id="2_00vsl"]
[ext_resource type="Texture2D" uid="uid://deonf15vu8kpg" path="res://Art/Tiles/Wall-Tileset-Placeholder.png" id="5_3158n"]
[ext_resource type="Script" uid="uid://bidoqgqgbpmty" path="res://Levels/fall_area.gd" id="6_ub4j8"]
[ext_resource type="PackedScene" uid="uid://tcwagokumxbp" path="res://UI/Stat_Ui/player_ui.tscn" id="7_7e6fp"]
[ext_resource type="PackedScene" uid="uid://bmw4e0medrrkm" path="res://Characters/Dungeon/Eyeball/eyeball.tscn" id="8_4t6x8"]
[ext_resource type="PackedScene" uid="uid://ckjj7u5b6b63w" path="res://Components/DamageManager/damage_manager.tscn" id="8_7e6fp"]
[ext_resource type="Script" uid="uid://dskxsa53b5kjt" path="res://Components/KnifeSoundManager/knife_sound_manager.gd" id="9_4t6x8"]
[ext_resource type="AudioStream" uid="uid://c4vta7dqfghro" path="res://sounds/knife_start.mp3" id="10_k8b6b"]
[ext_resource type="AudioStream" uid="uid://c5q0n8n88jcun" path="res://sounds/kilo/knife_end.mp3" id="11_lx7qo"]
[ext_resource type="Script" uid="uid://djcmrscbbc07m" path="res://Components/EyeballSoundManager/eyeball_sound_manager.gd" id="12_662sx"]
[ext_resource type="AudioStream" uid="uid://cs0qx3h8xlay8" path="res://sounds/eye/agro.mp3" id="12_ouwm7"]
[ext_resource type="AudioStream" uid="uid://b53hsj6tygfwq" path="res://sounds/eye/death.mp3" id="13_662sx"]
[ext_resource type="AudioStream" uid="uid://cril3s4lnrmx" path="res://sounds/eye/fall.mp3" id="14_cn5b1"]
[ext_resource type="AudioStream" uid="uid://d0ck88vrj4hne" path="res://sounds/eye/shoot_end.mp3" id="15_i45ex"]
[ext_resource type="AudioStream" uid="uid://dna3h4of2cbo6" path="res://sounds/eye/shoot_start.mp3" id="16_7jovk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_662sx"]
texture = ExtResource("1_ormqy")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
0:1/0 = 0
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, 0, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 4, 4, 8, 8, -8, 8)
4:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:1/0 = 0
15:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:1/0 = 0
16:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, 0, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 0, 0, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
16:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
16:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, 0, 0)
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 0, 0, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:4/0 = 0
11:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
16:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
0:5/0 = 0
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, 0, 0)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 0, 0, -8, 8)
4:5/0 = 0
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:5/0 = 0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:5/0 = 0
11:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:5/0 = 0
12:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:5/0 = 0
13:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:5/0 = 0
14:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:5/0 = 0
15:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:5/0 = 0
16:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
17:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, 0, 8, -8, 8, 8, -8, 8)
18:6/0 = 0
18:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:6/0 = 0
19:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 0, 0, 8, 8, -8, 8)
20:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
16:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, 0, 8, -8, 8, 8, -8, 8)
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
20:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 0, 0, 8, 8, -8, 8)
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
16:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
20:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
16:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, 0, 0)
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
20:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 0, 0, -8, 8)
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
17:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, 0, 0)
18:10/0 = 0
18:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:10/0 = 0
19:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 0, 0, -8, 8)
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_4k50d"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_662sx")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cn5b1"]
texture = ExtResource("5_3158n")
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_pvdih"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_cn5b1")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3158n"]
size = Vector2(949, 20)

[node name="TestLevel" type="Node2D"]

[node name="Background" parent="." node_paths=PackedStringArray("player") instance=ExtResource("2_00vsl")]
player = NodePath("../Kilo")
metadata/_edit_use_anchors_ = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAFAAcAAAAOAAEAAAAGAAcAAAAPAAEAAAAHAAcAAAAMAAEAAAAIAAcAAAANAAEAAAAJAAcAAAAOAAEAAAAKAAcAAAAPAAEAAAACAAgAAAALAAIAAAACAAkAAAALAAMAAAACAAoAAAALAAQAAAACAAsAAAALAAMAAAACAAwAAAALAAMAAAAEAAgAAAAMAAIAAAAHAAgAAAAPAAIAAAADAAgAAAANAAIAAAAKAAgAAAANAAIAAAALAAcAAAAQAAEAAAALAAgAAAAQAAIAAAALAAkAAAAQAAMAAAALAAoAAAAQAAQAAAALAAsAAAAQAAQAAAAIAAgAAAAOAAIAAAAJAAgAAAAOAAIAAAAEAAkAAAANAAgAAAADAAkAAAANAAIAAAAKAAkAAAANAAIAAAAJAAkAAAAMAAgAAAAIAAkAAAAKAAgAAAAGAAkAAAAIAAMAAAAFAAkAAAAIAAMAAAAEAAoAAAAIAAMAAAADAAoAAAANAAIAAAAFAAoAAAAIAAMAAAAGAAoAAAAIAAMAAAAJAAoAAAALAAkAAAAKAAoAAAANAAIAAAAKAAsAAAANAAIAAAAKAAwAAAANAAIAAAAJAAwAAAAIAAMAAAAIAAwAAAAIAAMAAAAHAAsAAAAIAAMAAAAEAAsAAAAIAAMAAAADAAsAAAANAAIAAAADAAwAAAANAAIAAAAEAAwAAAAIAAMAAAAFAAwAAAAIAAMAAAAGAAwAAAAIAAMAAAAGAAsAAAAIAAMAAAAFAAsAAAAIAAMAAAAHAAwAAAAIAAMAAAAJAAsAAAAOAAkAAAALAAwAAAAQAAMAAAARAAcAAAAGAAEAAAASAAcAAAAHAAEAAAATAAcAAAAIAAEAAAAUAAcAAAAJAAEAAAAQAAcAAAAFAAEAAAAQAAgAAAAFAAIAAAAQAAkAAAAFAAIAAAAQAAoAAAAFAAIAAAAQAAsAAAAFAAMAAAAQAAwAAAAFAAQAAAAVAAcAAAAIAAEAAAAWAAcAAAAJAAEAAAAXAAcAAAAIAAEAAAAYAAcAAAAJAAEAAAAZAAcAAAAKAAEAAAAZAAgAAAAKAAIAAAAZAAkAAAAKAAMAAAAZAAoAAAAKAAIAAAAZAAsAAAAKAAMAAAAZAAwAAAAKAAQAAAARAAgAAAAGAAIAAAASAAgAAAAHAAIAAAATAAgAAAAIAAIAAAAUAAgAAAAJAAIAAAAVAAgAAAAGAAIAAAAWAAgAAAAHAAIAAAAXAAgAAAAIAAIAAAAYAAgAAAAJAAIAAAARAAkAAAAGAAMAAAARAAoAAAAGAAMAAAARAAsAAAAGAAMAAAARAAwAAAAGAAMAAAAYAAkAAAAJAAMAAAAYAAoAAAAJAAMAAAAYAAsAAAAJAAMAAAAYAAwAAAAJAAMAAAASAAsAAAAHAAMAAAASAAoAAAAHAAkAAAASAAkAAAACAAgAAAATAAkAAAACAAkAAAAUAAkAAAAHAAMAAAAVAAkAAAADAAgAAAAWAAkAAAAGAAkAAAAXAAkAAAAHAAgAAAAXAAoAAAAHAAgAAAAXAAsAAAAHAAMAAAAXAAwAAAAIAAMAAAAWAAwAAAAHAAMAAAAWAAsAAAAHAAMAAAAVAAsAAAAHAAMAAAAVAAoAAAAHAAMAAAAUAAoAAAAHAAMAAAAUAAsAAAAHAAMAAAATAAsAAAAHAAMAAAATAAwAAAAHAAMAAAASAAwAAAAIAAMAAAATAAoAAAAHAAMAAAAUAAwAAAAHAAMAAAAVAAwAAAAHAAMAAAAWAAoAAAAEAAkAAAACAAcAAAALAAEAAAADAAcAAAAMAAEAAAAEAAcAAAANAAEAAAAFAAgAAAANAAIAAAAGAAgAAAAOAAIAAAAHAAkAAAAIAAMAAAAHAAoAAAAIAAMAAAAIAAoAAAAKAAkAAAAIAAsAAAAIAAMAAAAdAAcAAAAFAAEAAAAdAAgAAAAFAAIAAAAdAAkAAAAFAAMAAAAeAAcAAAAGAAEAAAAeAAgAAAAGAAIAAAAeAAkAAAAGAAMAAAAfAAcAAAAHAAEAAAAfAAgAAAAHAAIAAAAfAAkAAAAHAAgAAAAgAAcAAAAIAAEAAAAgAAgAAAAIAAIAAAAgAAkAAAAGAAgAAAAhAAcAAAAJAAEAAAAhAAgAAAAJAAIAAAAhAAkAAAACAAMAAAAiAAcAAAAIAAEAAAAiAAgAAAADAAMAAAAiAAkAAAACAAMAAAAdAAoAAAAFAAIAAAAdAAsAAAAFAAIAAAAdAAwAAAAFAAIAAAAhAAoAAAACAAMAAAAiAAoAAAACAAMAAAAiAAsAAAACAAMAAAAiAAwAAAACAAMAAAAeAAoAAAAJAAMAAAAeAAsAAAAJAAMAAAAeAAwAAAAJAAMAAAAhAAsAAAACAAMAAAAhAAwAAAACAAMAAAAfAAwAAAACAAMAAAAfAAsAAAACAAMAAAAfAAoAAAACAAkAAAAgAAoAAAAIAAMAAAAgAAsAAAAIAAMAAAAgAAwAAAAIAAMAAAAjAAYAAAAAAAIAAAAkAAUAAAABAAEAAAAkAAYAAAABAAIAAAAjAAcAAAABAAIAAAAlAAQAAAAAAAIAAAAmAAMAAAABAAEAAAAmAAQAAAABAAIAAAAlAAUAAAABAAIAAAAnAAMAAAACAAEAAAAoAAMAAAACAAEAAAAnAAQAAAACAAIAAAAoAAQAAAACAAIAAAAoAAUAAAADAAMAAAAoAAYAAAADAAMAAAAoAAcAAAADAAMAAAAoAAgAAAADAAMAAAAoAAkAAAADAAMAAAAoAAoAAAADAAMAAAAoAAsAAAADAAMAAAAoAAwAAAADAAMAAAAjAAgAAAADAAgAAAAjAAkAAAACAAMAAAAjAAoAAAACAAMAAAAjAAsAAAACAAMAAAAjAAwAAAACAAMAAAAkAAwAAAACAAMAAAAlAAwAAAACAAMAAAAmAAwAAAACAAMAAAAnAAwAAAACAAkAAAAnAAsAAAADAAkAAAAnAAoAAAAEAAgAAAAnAAkAAAAHAAgAAAAnAAgAAAAFAAgAAAAnAAcAAAAGAAkAAAAnAAYAAAAEAAkAAAAnAAUAAAAHAAgAAAAmAAYAAAAGAAkAAAAmAAcAAAAIAAYAAAAmAAgAAAACAAMAAAAmAAkAAAACAAMAAAAmAAoAAAACAAMAAAAlAAoAAAACAAMAAAAlAAkAAAACAAMAAAAlAAgAAAACAAMAAAAlAAcAAAAEAAkAAAAmAAsAAAACAAMAAAAkAAsAAAACAAMAAAAkAAoAAAACAAMAAAAkAAkAAAACAAMAAAAkAAgAAAACAAkAAAAlAAsAAAACAAMAAAAkAAcAAAAGAAIAAAAlAAYAAAAGAAIAAAAmAAUAAAAGAAIAAAD4/wcAAAAOAAEAAAD4/wgAAAANAAIAAAD4/wkAAAAIAAMAAAD4/woAAAACAAMAAAD5/wcAAAAPAAEAAAD5/wgAAAAOAAIAAAD5/wkAAAAIAAMAAAD5/woAAAAIAAMAAAD5/wsAAAAIAAMAAAD5/wwAAAAIAAMAAAD6/wcAAAAMAAEAAAD6/wgAAAAPAAIAAAD6/wkAAAAIAAMAAAD6/woAAAAIAAMAAAD6/wsAAAAIAAMAAAD6/wwAAAAIAAMAAAD7/wcAAAANAAEAAAD7/wgAAAAOAAIAAAD7/wkAAAAKAAgAAAD7/woAAAAKAAkAAAD7/wsAAAAIAAMAAAD7/wwAAAAIAAMAAAD8/wcAAAAOAAEAAAD8/wgAAAAOAAIAAAD8/wkAAAAMAAgAAAD8/woAAAAKAAgAAAD8/wsAAAAKAAkAAAD8/wwAAAAIAAMAAAD9/wcAAAAPAAEAAAD9/wgAAAANAAIAAAD9/wkAAAANAAIAAAD9/woAAAANAAIAAAD9/wsAAAANAAIAAAD9/wwAAAANAAIAAAD+/wcAAAAQAAEAAAD+/wgAAAAQAAIAAAD+/wkAAAAQAAMAAAD+/woAAAAQAAQAAAD+/wsAAAAQAAQAAAD+/wwAAAAQAAMAAAD4/wsAAAACAAMAAAD4/wwAAAACAAMAAADu/wwAAAALAAcAAADv/wwAAAAIAAMAAADw/wwAAAAIAAMAAADx/wwAAAAIAAMAAADy/wwAAAAIAAMAAADz/wwAAAAIAAMAAAD0/wwAAAAIAAMAAAD1/wwAAAAIAAMAAAD2/wwAAAAIAAMAAAD3/wwAAAAIAAMAAAD0/wkAAAAIAAMAAAD0/wgAAAAPAAIAAADv/wgAAAAOAAMAAADu/wgAAAAKAAcAAADu/wkAAAALAAcAAADu/woAAAALAAcAAADu/wsAAAALAAcAAADv/wsAAAAOAAgAAADv/woAAAAMAAgAAADv/wkAAAANAAgAAADw/wkAAAAIAAMAAADw/wgAAAAOAAMAAADx/wgAAAAOAAMAAADx/wkAAAAIAAMAAADx/woAAAAIAAMAAADw/woAAAAIAAMAAADw/wsAAAAIAAMAAADx/wsAAAAIAAMAAADy/wsAAAAIAAMAAADy/woAAAAIAAMAAADy/wkAAAAIAAMAAADy/wgAAAAPAAIAAADz/wgAAAAOAAIAAADz/wkAAAAIAAMAAADz/woAAAAIAAMAAADz/wsAAAAIAAMAAAD0/wsAAAAIAAMAAAD0/woAAAAIAAMAAAD1/woAAAAIAAMAAAD1/wkAAAAIAAMAAAD1/wgAAAAOAAIAAAD2/wgAAAAPAAIAAAD2/wkAAAAIAAMAAAD2/woAAAAIAAMAAAD2/wsAAAAIAAMAAAD1/wsAAAAIAAMAAAD3/wsAAAAIAAMAAAD3/woAAAAIAAMAAAD3/wkAAAAIAAMAAAD3/wgAAAAPAAIAAAD2/wcAAAANAAEAAAD3/wcAAAAOAAEAAAD0/wcAAAANAAEAAAD1/wcAAAAOAAEAAADy/wcAAAAPAAQAAADz/wcAAAASAAEAAADw/wcAAAAOAAMAAADx/wcAAAAOAAMAAADv/wcAAAAOAAMAAADu/wcAAAAMAAIAAADz/wQAAAAQAAIAAADz/wUAAAAQAAMAAADz/wYAAAAQAAQAAADz/wEAAAAQAAEAAADz/wIAAAAQAAMAAADz/wMAAAAQAAQAAADv/wEAAAANAAEAAADw/wEAAAAOAAEAAADx/wEAAAAPAAEAAADy/wEAAAAPAAEAAADu/wEAAAAMAAEAAADv/wIAAAANAAIAAADw/wIAAAAOAAIAAADx/wIAAAAPAAIAAADy/wIAAAAPAAIAAADu/wIAAAAMAAIAAADy/wMAAAAPAAIAAADy/wQAAAAPAAIAAADy/wUAAAAPAAIAAADy/wYAAAAPAAMAAADv/wYAAAAOAAMAAADw/wYAAAAOAAMAAADx/wYAAAAOAAMAAADx/wUAAAAOAAMAAADw/wUAAAAOAAMAAADv/wUAAAAOAAMAAADu/wUAAAAMAAIAAADu/wQAAAAMAAIAAADv/wQAAAANAAgAAADv/wMAAAAKAAgAAADw/wMAAAAOAAMAAADx/wMAAAAJAAkAAADx/wQAAAAOAAMAAADw/wQAAAAOAAMAAADu/wMAAAAMAAIAAADu/wYAAAAMAAIAAAA=")
tile_set = SubResource("TileSet_4k50d")

[node name="Kilo" parent="." instance=ExtResource("1_4k50d")]
position = Vector2(-84, 95)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Kilo"]
remote_path = NodePath("../../FollowCamera")

[node name="Knife_Sound_Manager" type="Node" parent="Kilo"]
script = ExtResource("9_4t6x8")

[node name="Knife_Start" type="AudioStreamPlayer2D" parent="Kilo/Knife_Sound_Manager"]
stream = ExtResource("10_k8b6b")
volume_db = -5.478

[node name="Knife_End" type="AudioStreamPlayer2D" parent="Kilo/Knife_Sound_Manager"]
stream = ExtResource("11_lx7qo")
volume_db = -6.666

[node name="FollowCamera" type="Camera2D" parent="."]
position = Vector2(-84, 95)
zoom = Vector2(4.5, 4.5)
limit_left = -290
limit_top = -175
limit_right = 660
limit_bottom = 208
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
editor_draw_limits = true

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAApAAEAAAABAAMAAAApAAIAAAABAAQAAAApAAMAAAABAAMAAAApAAQAAAABAAMAAAApAAUAAAABAAQAAAApAAYAAAABAAMAAAApAAcAAAABAAQAAAApAAgAAAABAAMAAAApAAkAAAABAAQAAAApAAoAAAABAAMAAAApAAsAAAABAAMAAAApAAwAAAABAAQAAAApAP//AAABAAMAAAApAAAAAAABAAQAAADt/wUAAAAHAAMAAADt/wYAAAAHAAQAAADt/wMAAAAHAAMAAADt/wQAAAAHAAQAAADt/wEAAAAHAAMAAADt/wIAAAAHAAQAAADt////AAAHAAMAAADt/wAAAAAHAAQAAADt/wsAAAAHAAMAAADt/wwAAAAHAAQAAADt/wkAAAAHAAMAAADt/woAAAAHAAQAAADt/wcAAAAHAAMAAADt/wgAAAAHAAQAAADt//7/AAAHAAQAAAApAP7/AAABAAQAAADt//3/AAAHAAMAAAApAP3/AAABAAMAAAAZAP3/AAAGAAIAAAAaAP3/AAACAAIAAAAbAP3/AAADAAIAAAAcAP3/AAAEAAIAAAAdAP3/AAAFAAIAAAAeAP3/AAAGAAIAAAAfAP3/AAACAAIAAAAgAP3/AAADAAIAAAAhAP3/AAAEAAIAAAAiAP3/AAAFAAIAAAAjAP3/AAAGAAIAAAAkAP3/AAACAAIAAAAlAP3/AAADAAIAAAAmAP3/AAAEAAIAAAAnAP3/AAAFAAIAAAAoAP3/AAAFAAIAAADt//v/AAAHAAMAAADt//z/AAAHAAQAAADt//n/AAAHAAMAAADt//r/AAAHAAQAAADt//f/AAAHAAQAAADt//j/AAAHAAQAAADt//b/AAAHAAQAAADt//X/AAAHAAMAAADy//X/AAAGAAIAAADz//X/AAADAAIAAAD0//X/AAAEAAIAAAD1//X/AAAFAAIAAAD2//X/AAACAAIAAADu//X/AAACAAIAAADv//X/AAADAAIAAADw//X/AAAEAAIAAADx//X/AAAFAAIAAAD3//X/AAADAAIAAAD4//X/AAAEAAIAAAD5//X/AAAFAAIAAAD6//X/AAACAAIAAAD7//X/AAADAAIAAAD8//X/AAAEAAIAAAD9//X/AAACAAIAAAD+//X/AAADAAIAAAD///X/AAACAAIAAAAAAPX/AAACAAIAAAABAPX/AAADAAIAAAACAPX/AAACAAIAAAADAPX/AAADAAIAAAAEAPX/AAACAAIAAAAFAPX/AAADAAIAAAAGAPX/AAACAAIAAAAHAPX/AAADAAIAAAAIAPX/AAACAAIAAAAJAPX/AAADAAIAAAAKAPX/AAAEAAIAAAALAPX/AAAFAAIAAAAMAPX/AAAHAAIAAAAMAPb/AAAHAAQAAAAMAPf/AAAHAAMAAAAMAPj/AAAHAAQAAAAMAPn/AAAHAAMAAAAMAPr/AAAHAAQAAAAMAPv/AAAHAAMAAAAMAPz/AAAHAAQAAAAUAP3/AAAEAAIAAAAVAP3/AAAFAAIAAAAWAP3/AAADAAIAAAAXAP3/AAAEAAIAAAAYAP3/AAAFAAIAAAASAP3/AAACAAIAAAATAP3/AAADAAIAAAAOAP3/AAACAAIAAAAPAP3/AAADAAIAAAAQAP3/AAAEAAIAAAARAP3/AAAFAAIAAAANAP3/AAACAAIAAAA=")
tile_set = SubResource("TileSet_pvdih")

[node name="FallArea" type="Area2D" parent="."]
position = Vector2(21, 219)
collision_layer = 0
collision_mask = 2
script = ExtResource("6_ub4j8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallArea"]
position = Vector2(163.5, 0)
shape = SubResource("RectangleShape2D_3158n")

[node name="DamageManager" parent="." instance=ExtResource("8_7e6fp")]

[node name="Player_Ui" parent="." instance=ExtResource("7_7e6fp")]

[node name="Eyeball2" parent="." instance=ExtResource("8_4t6x8")]
position = Vector2(296, -10)

[node name="Eyeball" parent="." instance=ExtResource("8_4t6x8")]
position = Vector2(497, -18)

[node name="Eyeball_Sound_Manager" type="Node" parent="."]
script = ExtResource("12_662sx")

[node name="Agro" type="AudioStreamPlayer2D" parent="Eyeball_Sound_Manager"]
stream = ExtResource("12_ouwm7")
volume_db = -8.0

[node name="Death_Rattle" type="AudioStreamPlayer2D" parent="Eyeball_Sound_Manager"]
stream = ExtResource("13_662sx")
volume_db = -6.667

[node name="Fall" type="AudioStreamPlayer2D" parent="Eyeball_Sound_Manager"]
stream = ExtResource("14_cn5b1")
volume_db = -8.0

[node name="Shoot_end" type="AudioStreamPlayer2D" parent="Eyeball_Sound_Manager"]
stream = ExtResource("15_i45ex")

[node name="Shoot_start" type="AudioStreamPlayer2D" parent="Eyeball_Sound_Manager"]
stream = ExtResource("16_7jovk")

[connection signal="body_entered" from="FallArea" to="FallArea" method="_on_body_entered"]
